fix overflow issue with answer form

--- a/app/assets/stylesheets/answer_index.scss
+++ b/app/assets/stylesheets/answer_index.scss
@@ -34,8 +34,9 @@
 }
 
 .answer-input{
-  height: 100%;
-  width: 100%;
+  height: 98%;
+  width: 700px;
+  overflow: auto;
 }
 
 .answer-form > input {
